; ModuleID = '/home/carl/AnghaBench/RetroArch/input/drivers_joypad/extr_gx_joypad.c_handle_hotplug.c'
source_filename = "/home/carl/AnghaBench/RetroArch/input/drivers_joypad/extr_gx_joypad.c_handle_hotplug.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32 }

@pad_type = common dso_local global i64* null, align 8
@WPAD_EXP_NOCONTROLLER = common dso_local global i64 0, align 8
@gx_joypad = common dso_local global %struct.TYPE_2__ zeroinitializer, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32, i64)* @handle_hotplug to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @handle_hotplug(i32 %0, i64 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i64, align 8
  store i32 %0, i32* %3, align 4
  store i64 %1, i64* %4, align 8
  %5 = load i64, i64* %4, align 8
  %6 = load i64*, i64** @pad_type, align 8
  %7 = load i32, i32* %3, align 4
  %8 = zext i32 %7 to i64
  %9 = getelementptr inbounds i64, i64* %6, i64 %8
  store i64 %5, i64* %9, align 8
  %10 = load i64, i64* %4, align 8
  %11 = load i64, i64* @WPAD_EXP_NOCONTROLLER, align 8
  %12 = icmp ne i64 %10, %11
  br i1 %12, label %13, label %19

13:                                               ; preds = %2
  %14 = load i32, i32* %3, align 4
  %15 = call i32 @gx_joypad_name(i32 %14)
  %16 = load i32, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @gx_joypad, i32 0, i32 0), align 4
  %17 = load i32, i32* %3, align 4
  %18 = call i32 @input_autoconfigure_connect(i32 %15, i32* null, i32 %16, i32 %17, i32 0, i32 0)
  br label %19

19:                                               ; preds = %13, %2
  ret void
}

declare dso_local i32 @input_autoconfigure_connect(i32, i32*, i32, i32, i32, i32) #1

declare dso_local i32 @gx_joypad_name(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
